[workspace]
members = [
    "set1/chal1",
    "set1/chal2",
    "set1/chal3",
    "set1/chal4",
    "set1/chal5",
    "set1/chal6",
    "set1/chal7",
    "set1/chal8",
    "set2/chal9",
    "set2/chal10",
    "set2/chal11",
    "set2/chal12",
    "set2/chal13",
    "crates/cbc",
    "crates/ecb",
    "crates/single-byte-xor",
    "crates/pkcs7",
]
resolver = "2"
