[workspace]
members = [
    "set1/chal1",
    "set1/chal2",
    "set1/chal3",
    "set1/chal4",
    "set1/chal5",
    "set1/chal6",
    "set1/chal7",
    "set1/chal8",
    "set2/chal9",
    "set2/chal10",
    "set2/chal11",
    "set2/chal12",
    "set2/chal13",
    "set2/chal14",
    "set2/chal15",
    "set2/chal16",
    "set3/chal17",
    "set3/chal18",
    "set3/chal19",
    "set3/chal20",
    "set3/chal22",
    "crates/cbc",
    "crates/ecb",
    "crates/single-byte-xor",
    "crates/pkcs7",
    "crates/ctr",
    "crates/mt19937", "set3/chal23", "set3/chal24",
]
resolver = "2"
