[package]
name = "chal6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
hex = "0.4.3"
itertools = "0.12.1"
lazy_static = "1.4.0"
rayon = "1.8.1"
single-byte-xor = { path = "../../crates/single-byte-xor" }
