[package]
name = "chal17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
cbc = { path = "../../crates/cbc" }
pkcs7 = { path = "../../crates/pkcs7" }
base64 = "0.21.7"
